bring all files in

--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -53,8 +53,9 @@ const { data, slug } = Astro.props.project;
 
 	@media (min-width: 50em) {
 		.card {
-			height: 22rem;
+			height: 100%;
 			border-radius: 1.5rem;
+			border-color: pink;
 		}
 
 		.title {
