--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,22 +30,22 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hi! I'm Jenny."
+					tagline="Software Engineer. Product Designer. Coffee Enthusiast."
 					align="start"
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Designer</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Coffee Lover</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Jenny's Headshot"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="https://storage.googleapis.com/jennyencho-website/landing-img/headshot.jpg"
 				/>
 			</header>
 
