added descriptions for Scootly

--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -4,11 +4,13 @@ import Icon from './Icon.astro';
 ---
 
 <aside>
-	<h2>Interested in working together?</h2>
-	<CallToAction href="mailto:me@example.com">
+	<p>Interested in working together?</p>
+	<p>Hello</p>
+	<p>hello2</p>
+	<!-- <CallToAction href="mailto:me@example.com">
 		Send Me a Message
 		<Icon icon="paper-plane-tilt" size="1.2em" />
-	</CallToAction>
+	</CallToAction> -->
 </aside>
 
 <style>
@@ -39,7 +41,7 @@ import Icon from './Icon.astro';
 		}
 
 		h2 {
-			font-size: var(--text-3xl);
+			font-size: var(--text-xl);
 			text-align: left;
 		}
 	}
