changed font to poppins

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@ const currentYear = new Date().getFullYear();
 		<p>&copy; {currentYear} Jenny Cho</p>
 	</div>
 	<p class="socials">
+		<a href="mailto: jennycho35@gmail.com">Email</a>
 		<a href="https://www.linkedin.com/in/jennyecho/"> Linkedin</a>
 		<a href="https://github.com/jenpennen"> GitHub</a>
 	</p>
