--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,9 +13,9 @@ import Hero from '../components/Hero.astro';
 				tagline="Hi! I'm Jenny."
 			>
 				<img
-					width="1553"
-					height="873"
-					src="/assets/at-work.jpg"
+					width="800"
+					height="800"
+					src="https://storage.googleapis.com/jennyencho-website/landing-img/headshot.jpg"
 					alt="Jeanine White at work with a colleague"
 				/>
 			</Hero>
@@ -24,26 +24,11 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
-					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						I'm passionate about crafting impactful digital experiences. Whether leading the design strategy for an AI service or scaling nonprofit data systems, I believe in engineering with a user-first mindset to deliver high performance solutions and seamless, stress-free user experiences.
 					</p>
 				</div>
 			</section>
-			<section>
+			<!-- <section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
 					<p>Corporis voluptates tenetur laudantium.</p>
@@ -54,10 +39,10 @@ import Hero from '../components/Hero.astro';
 				<div class="content">
 					<p>officia unde omnis</p>
 				</div>
-			</section>
+			</section> -->
 		</main>
 
-		<ContactCTA />
+		<!-- <ContactCTA /> -->
 	</div>
 </BaseLayout>
 
@@ -69,6 +54,8 @@ import Hero from '../components/Hero.astro';
 	}
 
 	img {
+		align-self: center;
+		max-width: 50%;
 		margin-top: 1.5rem;
 		border-radius: 1.5rem;
 		box-shadow: var(--shadow-md);
