--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,12 +31,12 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hi! I'm Jenny."
-					tagline="Software Engineer. Product Designer. Coffee Enthusiast."
+					tagline="Currently building and designing internal Cloud and AI tools at Develop For Good."
 					align="start"
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Designer</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Product Designer</Pill>
 						<Pill><Icon icon="pencil-line" size="1.33em" /> Coffee Lover</Pill>
 					</div>
 				</Hero>
@@ -49,7 +49,7 @@ const projects = (await getCollection('work'))
 				/>
 			</header>
 
-			<Skills />
+			<!-- <Skills /> -->
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
@@ -78,7 +78,7 @@ const projects = (await getCollection('work'))
 					</CallToAction>
 				</div>
 			</section>
-
+<!-- 
 			<section class="section with-background bg-variant">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Mentions</h3>
@@ -99,10 +99,10 @@ const projects = (await getCollection('work'))
 						}
 					</Grid>
 				</div>
-			</section>
+			</section> -->
 		</main>
 
-		<ContactCTA />
+		<!-- <ContactCTA /> -->
 	</div>
 </BaseLayout>
 
