--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -52,7 +52,7 @@ const { Content } = await entry.render();
 				</div>
 			</main>
 		</div>
-		<ContactCTA />
+		<!-- <ContactCTA /> -->
 	</div>
 </BaseLayout>
 
