--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const projects = (await getCollection('work'))
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Software Engineer </Pill>
 						<Pill><Icon icon="microphone-stage" size="1.33em" /> Product Designer</Pill>
 						<Pill><Icon icon="pencil-line" size="1.33em" /> Coffee Lover</Pill>
 					</div>
