made random changes in markdown

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,7 @@ import Hero from '../components/Hero.astro';
 			</Hero>
 
 			<section>
-				<!-- <h2 class="section-title">Background</h2> -->
+				<h2 class="section-title">About</h2>
 				<div class="content">
 					<p>
 						I'm passionate about crafting impactful digital experiences. Whether leading the design strategy for an AI service or scaling nonprofit data systems, I believe in engineering with a user-first mindset to deliver high performance solutions and seamless, stress-free user experiences.
