--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -16,7 +16,7 @@ import Icon from './Icon.astro';
 		border: 0;
 		border-radius: 999rem;
 		padding: 0;
-		background-color: var(--gray-999);
+		background-color: var(--gray-50);
 		box-shadow: inset 0 0 0 1px var(--accent-overlay);
 		cursor: pointer;
 	}
@@ -29,7 +29,8 @@ import Icon from './Icon.astro';
 		width: 2rem;
 		height: 2rem;
 		font-size: 1rem;
-		color: var(--accent-overlay);
+		/* color: var(--accent-overlay); */
+		color: var(--accent-regular);
 	}
 
 	.icon.light::before {
@@ -48,7 +49,8 @@ import Icon from './Icon.astro';
 	:global(.theme-dark) .icon.dark,
 	:global(html:not(.theme-dark)) .icon.light,
 	button[aria-pressed='false'] .icon.light {
-		color: var(--accent-text-over);
+		/* color: var(--accent-text-over); */
+		color: white;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
