--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,15 +5,14 @@ const currentYear = new Date().getFullYear();
 
 <footer>
 	<div class="group">
-		<p>
+		<!-- <p>
 			Made with AstroJS
-			<!-- <Icon icon="rocket-launch" size="1.2em" /> -->
-		</p>
+		</p> -->
 		<p>&copy; {currentYear} Jenny Cho</p>
 	</div>
 	<p class="socials">
-		<a href="mailto: jennycho35@gmail.com">Email</a>
-		<a href="https://www.linkedin.com/in/jennyecho/"> Linkedin</a>
+		<a target='_blank' href="mailto: jennycho35@gmail.com">Email</a>
+		<a target='_blank' href="https://www.linkedin.com/in/jennyecho/"> Linkedin</a>
 		<a href="https://github.com/jenpennen"> GitHub</a>
 	</p>
 </footer>
