--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -32,6 +32,9 @@ import Icon from './Icon.astro';
 		/* color: var(--accent-overlay); */
 		color: var(--accent-regular);
 	}
+	.icon.dark{
+		color: white;
+	}
 
 	.icon.light::before {
 		content: '';
