--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import Hero from '../components/Hero.astro';
 					width="800"
 					height="800"
 					src="https://storage.googleapis.com/jennyencho-website/landing-img/headshot.jpg"
-					alt="Jeanine White at work with a colleague"
+					alt="Jenny Headshot"
 				/>
 			</Hero>
 
